--- a/bower.json
+++ b/bower.json
@@ -21,12 +21,11 @@
 		"jquery": "2.1.1",
 		"jquery-ui": "1.11.2",
 		"bootstrap": "3.2.0",
+		"chosen": "https://github.com/harvesthq/chosen/releases/download/v1.4.1/chosen_v1.4.1.zip",
 		"fontawesome": "4.2.0",
 		"lodash": "~3.2.0"
-		"chosen": "https://github.com/harvesthq/chosen/releases/download/v1.3.0/chosen_v1.3.0.zip"
 	},
 	"devDependencies":
 	{
-		"mocks": "1.3.12"
 	}
 }
