--- a/package.json
+++ b/package.json
@@ -3,32 +3,54 @@
 	"version": "0.1.0",
 	"description": "Playground Web Application: playing with JS frameworks",
 	"author": "PhiLho <PhiLho(a)GMX.net",
+	"contributors":
+	[
+		{ "name": "You", "email": "you@example.com" }
+	],
 	"private": false,
 	"license": "http://www.opensource.org/licenses/Zlib",
+	"repository":
+	{
+		"type": "git",
+		"url": "https://github.com/PhiLhoSoft/Web-Playground.git"
+	},
 	"main": "src/main/index.html",
 	"devDependencies":
 	{
 		"bower": "^1.3.9",
-		"browserify": "^4.2.3",
-		"http-server": "^0.7.1",
-		"karma": "^0.12.23",
-		"karma-chrome-launcher": "^0.1.4",
-		"karma-firefox-launcher": "^0.1.3",
-		"karma-coverage": "^0.2.6",
-		"karma-jasmine": "^0.1.5",
-		"karma-phantomjs-launcher": "^0.1.4"
+		"browserify": "^6.3.2",
+		"http-server": "^0.7.3",
+		"opener": "^1.4.0",
+		"jshint": "^2.5.10",
+		"node-sass": "3.0.0-alpha.0",
+		"istanbul": "~0.3.2",
+		"mocha": "^1.21.4",
+		"sinon": "^1.14.1",
+		"chai": "^2.1.0",
+		"sinon-chai": "^2.7.0",
+		"phantomjs": "~1.9.1",
+		"mocha-phantomjs": "^3.5.3",
+		"rimraf": "^2.2.8"
 	},
 	"scripts":
 	{
-		"env": "env",
-		"postinstall": "bower install",
+		"clean": "rimraf dist/*",
+		"lint": "jshint src/main/js/",
+
+		"prebuild": "npm run clean -s",
+		"build": "npm run build:scripts -s && npm run build:styles -s",
+		"build:scripts": "browserify -d src/main/js/App.js -p [minifyify --compressPath . --map main.js.map --output dist/main.js.map]",
+		"build:styles": "node node-sass.js",
+
+		"pretest": "npm install && npm run lint",
+		"pretestph": "npm install && npm run lint",
 		"prestart": "npm install",
-		"start": "http-server -a 0.0.0.0 -p 8000",
-		"pretest": "npm install",
-		"test": "node node_modules/karma/bin/karma start src/test/js/karma.conf.js",
-		"test-single-run": "node node_modules/karma/bin/karma start src/test/js/karma.conf.js --single-run",
-		"preupdate-webdriver": "npm install",
-		"update-webdriver": "webdriver-manager update",
-		"lint": "jshint src/main/js/**.js"
+		"postinstall": "bower install",
+		"start": "http-server -a 0.0.0.0 -p 8000 src/main/html/",
+
+		"test": "mocha --reporter spec --recursive src/test",
+		"//": "Windows-specific path because of https://github.com/joyent/node/issues/5841",
+		"testph": "mocha-phantomjs --reporter spec -p node_modules/phantomjs/lib/phantom/phantomjs.exe src/test/TestBed.html",
+		"cover": "istanbul cover node_modules/mocha/bin/mocha -- --reporter dot --check-leaks src/test/ && opener ./coverage/lcov-report/lib/sinon-chai.js.html"
 	}
 }
