--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
 	"devDependencies":
 	{
 		"bower": "^1.3.9",
-		"browserify": "^9.0.3",
 		"chai": "^2.1.0",
 		"http-server": "^0.7.3",
 		"istanbul": "~0.3.2",
@@ -31,8 +30,7 @@
 		"rimraf": "^2.2.8",
 		"sinon": "^1.14.1",
 		"sinon-chai": "^2.7.0",
-		"uglify-js": "^2.4.17",
-		"watchify": "^2.4.0"
+		"uglify-js": "^2.4.17"
 	},
 	"scripts":
 	{
@@ -41,8 +39,9 @@
 
 		"prebuild": "npm run clean -s",
 		"build": "npm run build:scripts -s && npm run build:styles -s",
-		"build:scripts": "browserify -d src/main/js/App.js -p [minifyify --compressPath . --map main.js.map --output dist/main.js.map]",
-		"build:styles": "node node-sass-run.js",
+		"build:scripts": "echo no build step currently",
+		"build:styles": "node-sass --source-comments --source-map --output-style nested --include-path src/main/sass --output src/main/css src/main/sass/playground.scss",
+		"wsass": "node-sass --watch",
 
 		"pretest": "npm install && npm run lint",
 		"pretestph": "npm install && npm run lint",
