Sass generation work; also move things around

--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,6 +1,6 @@
-scss_files: 'src/main/webapp/*.scss'
+scss_files: 'src/main/sass/*.scss'
 
-exclude: 'src/main/webapp//compass/**'
+exclude: 'src/main/sass//compass/**'
 
 linters:
   HexNotation:
