--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "philhosoft-js-playground",
 	"version": "0.1.0",
-	"description": "Playground Web Application: playing with JS frameworks",
+	"description": "Playground Web Application: playing with JS frameworks / libraries",
 	"author": "PhiLho <PhiLho(a)GMX.net>",
 	"contributors":
 	[
