Steps toward using RequireJS.
Fails at running tests, though. Issue with async loading, apparently.

--- a/src/main/js/.jshintrc
+++ b/src/main/js/.jshintrc
@@ -1,6 +1,14 @@
 {
 	"browser": true,
-	"predef": [ "_", "$", "jquery", "require", "define", "console" ],
+	"globals":
+	{
+		"_": false,
+		"$": false,
+		"jquery": false,
+		"require": false,
+		"define": false,
+		"console": false
+	},
 
 	"strict": false,
 	"undef": true,
