--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 	"main": "src/main/html/index.html",
 	"devDependencies":
 	{
-		"bower": "^1.3.9",
+		"bower": "^1.4.1",
 		"chai": "^2.1.0",
 		"http-server": "^0.7.3",
 		"istanbul": "~0.3.2",
@@ -26,7 +26,7 @@
 		"mocha-phantomjs": "^3.5.3",
 		"node-sass": "3.0.0-alpha.0",
 		"opener": "^1.4.0",
-		"phantomjs": "~1.9.1",
+		"phantomjs": "~1.9.16",
 		"rimraf": "^2.2.8",
 		"sinon": "^1.14.1",
 		"sinon-chai": "^2.7.0",
@@ -50,9 +50,11 @@
 		"start": "http-server -a localhost -p 8090 .",
 		"go": "opener http://localhost:8090/src/main/html",
 
-		"test": "mocha --reporter spec --recursive src/test",
+		"test": "mocha --reporter spec",
+		"testOld": "mocha --reporter spec --recursive src/test",
 		"testb": "opener src/test/TestBed.html",
 		"//": "Windows-specific path because of https://github.com/joyent/node/issues/5841",
+		"testphwr": "mocha-phantomjs --proxy-type=none --web-security=false --reporter spec -p node_modules/phantomjs/lib/phantom/phantomjs.exe src/test/RequireTests.html",
 		"testphw": "mocha-phantomjs --reporter spec -p node_modules/phantomjs/lib/phantom/phantomjs.exe src/test/TestBed.html",
 		"testphu": "mocha-phantomjs --reporter spec -p ./node_modules/phantomjs/bin/phantomjs src/test/TestBed.html",
 		"cover": "istanbul cover node_modules/mocha/bin/_mocha -- --reporter dot --recursive src/test",
