Dropping RequireJS in favor of Browserify
Not fully working yet

--- a/package.json
+++ b/package.json
@@ -27,29 +27,35 @@
 		"node-sass": "3.0.0-alpha.0",
 		"opener": "^1.4.0",
 		"phantomjs": "~1.9.16",
-		"rimraf": "^2.2.8",
 		"sinon": "^1.14.1",
 		"sinon-chai": "^2.7.0",
+		"browserify": "^6.0.2",
+		"debowerify": "^1.2.0",
+		"beefy": "^2.1.3",
 		"uglify-js": "^2.4.17"
 	},
 	"scripts":
 	{
-		"clean": "rimraf dist/*",
+		"//": "Using Unix commands. On Windows, get UnxUtils or GnuWin32.",
+		"clean": "rm -rf dist/*",
 		"lint": "jshint src/main/js/",
 
 		"prebuild": "npm run clean -s",
-		"build": "npm run build:scripts -s && npm run build:styles -s",
-		"build:scripts": "echo no build step currently",
-		"build:styles": "node-sass --source-comments --source-map=true --output-style nested --include-path src/main/sass --output asset/css src/main/sass/playground.scss",
-		"css": "node node-sass-run.js",
+		"build": "npm run build-html -s && npm run build-js -s && npm run build-css -s",
+		"build-html": "cp src/main/html/index.html dist/",
+		"build-js-lib": "node browserify.js",
+		"build-js": "browserify -t debowerify --external dist/libraries.js --exclude asset/lib/**/*.js src/main/js/App.js -o dist/index.js",
+		"build-css": "node-sass --source-comments --source-map=true --output-style nested --include-path src/main/sass --output asset/css src/main/sass/playground.scss",
+		"alternative-build-css": "node node-sass-run.js",
 
-		"pretest": "npm install && npm run lint",
-		"pretestph": "npm install && npm run lint",
 		"prestart": "npm install",
-		"postinstall": "bower install",
+		"postinstall": "bower install && npm run build-js-lib -s",
 		"start": "http-server -a localhost -p 8090 .",
-		"go": "opener http://localhost:8090/src/main/html",
+		"go": "opener http://localhost:8090/dist/",
+	    "startb": "beefy dist/index.js 8099 --live --open --  --exclude asset/lib/**/*.js src/main/js/App.js -d",
 
+		"pretest": "npm install && npm run lint -s",
+		"pretestphw": "npm install && npm run lint -s",
 		"test": "mocha --reporter spec",
 		"testOld": "mocha --reporter spec --recursive src/test",
 		"testb": "opener src/test/TestBed.html",
