--- a/src/main/js/.jshintrc
+++ b/src/main/js/.jshintrc
@@ -2,9 +2,7 @@
 	"browser": true,
 	"globals":
 	{
-		"_": false,
-		"$": false,
-		"jquery": false,
+		"module": false,
 		"require": false,
 		"define": false,
 		"console": false
