--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,12 @@
 	],
 	"dependencies":
 	{
-		"requirejs": "^2.1.6",
-		"jquery": "^2.1.1",
+		"jquery": "^2.1.3",
 		"jquery-ui": "^1.11.4",
 		"bootstrap": "^3.3.4",
 		"fontawesome": "^4.2.0",
-		"lodash": "^3.2.0",
+		"lodash": "^3.6.0",
+		"moment": "^2.10.2",
 		"kefir": "^1.2.0",
 		"kefir-jquery": "^1.0.0",
 		"virtual-dom": "^2.0.1"
