--- a/bower.json
+++ b/bower.json
@@ -23,8 +23,8 @@
 		"fontawesome": "^4.2.0",
 		"lodash": "^3.6.0",
 		"moment": "^2.10.2",
+		"mithril": "^0.1.34",
 		"kefir": "^1.2.0",
-		"kefir-jquery": "^1.0.0",
-		"virtual-dom": "^2.0.1"
+		"kefir-jquery": "^1.0.0"
 	}
 }
