--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -1,16 +1,44 @@
-scss_files: 'src/main/sass/*.scss'
+scss_files: 'src/main/webapp/*.scss'
 
-exclude: 'src/main/sass//compass/**'
+exclude: 'src/main/webapp//compass/**'
 
 linters:
-  HexNotation:
-    style: uppercase
-
   Indentation:
     severity: warning
     character: tab
     width: 1
 
+  IdSelector:
+    enabled: false
+
+  QualifyingElement:
+    enabled: true
+    allow_element_with_attribute: true
+    allow_element_with_class: true
+
+  HexNotation:
+    style: uppercase
+
   LeadingZero:
     style: include_zero
 
+  EmptyLineBetweenBlocks:
+    enabled: false
+
+  SpaceBeforeBrace:
+    enabled: false
+
+  ColorKeyword:
+    enabled: false
+
+  ColorVariable:
+    enabled: false
+
+  SingleLinePerSelector:
+    enabled: false
+
+  PropertySortOrder:
+    enabled: false
+
+  NestingDepth:
+    max_depth: 4
