--- a/bower.json
+++ b/bower.json
@@ -21,10 +21,8 @@
 		"jquery-ui": "^1.11.4",
 		"bootstrap": "^3.3.4",
 		"fontawesome": "^4.2.0",
-		"lodash": "^3.6.0",
+		"lodash": "^3.10.0",
 		"moment": "^2.10.2",
-		"mithril": "^0.1.34",
-		"kefir": "^1.2.0",
-		"kefir-jquery": "^1.0.0"
+		"mithril": "^0.2.0"
 	}
 }
