--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
 	"name": "philhosoft-js-playground",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "Playground Web Application: playing with JS frameworks / libraries",
 	"author": "PhiLho <PhiLho(a)GMX.net>",
 	"contributors":
 	[
 		{ "name": "You", "email": "you@example.com" }
+	],
+	"keywords": *
+	[
+		 "reactive",
+		 "experiment",
+		"js",
+		"frameworks",
+		"libraries",
+		"es6",
+		"es2015"
 	],
 	"private": false,
 	"license": "http://www.opensource.org/licenses/Zlib",
@@ -14,13 +24,40 @@
 		"type": "git",
 		"url": "https://github.com/PhiLhoSoft/Web-Playground.git"
 	},
+	"bugs":
+	{
+		"url": "https://github.com/PhiLhoSoft/Web-Playground/issues"
+	},
+	"homepage": "https://github.com/PhiLhoSoft/Web-Playground#readme",
 	"main": "src/main/html/index.html",
+	"dependencies":
+	{
+		"babel-polyfill": "^6.0.16",
+		"jquery": "^2.1.3",
+		"jquery-ui": "^1.11.4",
+		"bootstrap": "^3.3.4",
+		"fontawesome": "^4.2.0",
+		"lodash": "^3.10.1",
+		"moment": "^2.10.2",
+		"mithril": "^0.2.0"
+	},
 	"devDependencies":
 	{
-		"bower": "^1.4.1",
-		"babel": "^5.6.10",
+		"webpack-dev-server": "latest",
+		"webpack": "latest",
+		"babel-core": "latest",
+		"babel-loader": "latest",
+		"babel-preset-es2015": "latest",
+		"babel-polyfill": "latest",
 
-		"mocha": "^2.2.4",
+		"style-loader": "latest",
+		"css-loader": "latest",
+		"postcss-loader": "latest",
+		"autoprefixer-loader": "latest",
+		"node-sass": "latest",
+		"sass-loader": "latest",
+
+		"mocha": "^2.3.0",
 		"chai": "^2.3.0",
 		"sinon": "^1.14.1",
 		"sinon-chai": "^2.7.0",
@@ -28,21 +65,16 @@
 		"phantomjs": "~1.9.16",
 		"mocha-phantomjs": "^3.5.3",
 
-		"http-server": "^0.7.3",
-		"jshint": "^2.5.10",
-		"node-sass": "3.0.0-alpha.0",
-		"opener": "^1.4.0",
-		"browserify": "^6.0.2",
-		"debowerify": "^1.2.0",
-		"bower-resolve": "^2.2.1",
-		"beefy": "^2.1.3",
-		"minifyify": "^6.4.0"
+		"http-server": "latest",
+		"eslint": "latest",
+		"node-sass": "latest",
+		"opener": "latest"
 	},
 	"scripts":
 	{
 		"//": "Using Unix commands (rm, cp). On Windows, get UnxUtils or GnuWin32. Well worth it, anyway. Git's bins can do the job, too.",
 		"clean": "rm -rf dist/*",
-		"lint": "jshint src/main/js/",
+		"lint": "eslint src/main/js/",
 
 		"prebuild": "npm run clean",
 		"build": "npm run build-css && npm run build-js-lib && npm run build-js",
@@ -53,7 +85,8 @@
 		"build-js": "browserify -t debowerify --external dist/libraries.js --exclude assets/libs/**/*.js src/main/js/App.js -o dist/index.js",
 		"babel": "babel app/index.js --out-file dist/index.js --source-maps",
 
-		"start": "http-server -a localhost -p 8090 .",
+		"start": "node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+		"startO": "http-server -a localhost -p 8090 .",
 		"go": "opener http://localhost:8090/dist/",
 	    "start-beefy": "beefy dist/index.js 8099 --live --open --  --exclude assets/libs/**/*.js src/main/js/App.js -d",
 
