--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,9 @@
 		"jquery-ui": "^1.11.4",
 		"bootstrap": "^3.3.4",
 		"fontawesome": "^4.2.0",
-		"lodash": "^3.10.0",
+		"lodash": "^3.10.1",
 		"moment": "^2.10.2",
-		"mithril": "^0.2.0"
+		"mithril": "^0.2.0",
+		"babel-polyfill": "^0.0.1"
 	}
 }
