--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -27,7 +27,12 @@ env:
 
 globals: # false means: read-only
   _: false       # Lodash (or Underscore)
+  mobx: false    # https://github.com/mobxjs/mobx/
   moment: false  # Moment.js
+
+parserOptions:
+  ecmaVersion: 6
+  sourceType: module
 
 rules:
 
@@ -54,7 +59,8 @@ rules:
     -
       beforeColon: false
       afterColon: true
-  brace-style:                  # enforce one true brace style
+      mode: minimum
+  brace-style:                  # enforce brace style
     - 1
     - allman
     - allowSingleLine: true # See https://github.com/eslint/eslint/issues/5197
@@ -83,7 +89,6 @@ rules:
     - 1
     - always
   space-infix-ops: 1            # require spaces around operators (fixable)
-  space-return-throw-case: 1    # require a space after return, throw, and case (fixable)
   spaced-comment: 1             # require or disallow a space immediately following the # or /* in a comment
   max-depth:                    # specify the maximum depth that blocks can be nested
     - 1
@@ -145,7 +150,7 @@ rules:
   no-dupe-args: 2               # disallow duplicate arguments in functions
   no-dupe-keys: 2               # disallow duplicate keys when creating object literals
   no-duplicate-case: 2          # disallow a duplicate case label
-  no-extra-parens: 1            # disallow unnecessary parentheses (off by default)
+  no-extra-parens: 0            # disallow unnecessary parentheses (off by default)
   no-extra-semi: 1              # disallow unnecessary semicolons
   no-func-assign: 2             # disallow overwriting functions written as function declarations
   no-unreachable: 2             # disallow unreachable statements after a return, throw, continue, or break statement
@@ -287,12 +292,17 @@ rules:
   generator-star-spacing:          # enforce spacing around the * in generator functions (fixable)
     - 1
     - "after"
-  no-arrow-condition: 2            # disallow arrow functions where a condition is expected
   no-class-assign: 2               # disallow modifying variables of class declarations
+  no-confusing-arrow: 2            # disallow arrow functions where they could be confused with comparisons
   no-const-assign: 2               # disallow modifying variables that are declared using const
   no-dupe-class-members: 2         # disallow duplicate name in class members
+  no-duplicate-imports: 2          # disallow duplicate module imports
   no-empty-pattern: 2              # disallow use of empty destructuring patterns
+  no-new-symbol: 2                 # disallow new operators with the Symbol object
+  no-restricted-imports: 0         # disallow specified modules when loaded by import
   no-this-before-super: 2          # disallow use of this/super before calling super() in constructors.
+  #no-useless-computed-key: 2       # disallow unnecessary computed property keys in object literals
+  no-useless-constructor: 2        # disallow unnecessary constructors
   no-var: 0                        # require let or const instead of var
   object-shorthand: 2              # require method and property shorthand syntax for object literals
   prefer-arrow-callback: 1         # suggest using arrow functions as callbacks
@@ -301,29 +311,6 @@ rules:
   prefer-spread: 1                 # suggest using the spread operator instead of .apply().
   prefer-template: 1               # suggest using template literals instead of strings concatenation
   require-yield: 2                 # disallow generator functions that do not have yield
-
-ecmaFeatures:
-  arrowFunctions: true                    # enable arrow functions
-  binaryLiterals: true                    # enable binary literals
-  blockBindings: true                     # enable let and const (aka block bindings)
-  classes: true                           # enable classes
-  defaultParams: true                     # enable default function parameters
-  destructuring: true                     # enable destructuring
-  forOf: true                             # enable for-of loops
-  generators: true                        # enable generators
-  modules: true                           # enable modules and global strict mode
-  objectLiteralComputedProperties: true   # enable computed object literal property names
-  objectLiteralDuplicateProperties: true  # enable duplicate object literal properties in strict mode
-  objectLiteralShorthandMethods: true     # enable object literal shorthand methods
-  objectLiteralShorthandProperties: true  # enable object literal shorthand properties
-  octalLiterals: true                     # enable octal literals
-  regexUFlag: true                        # enable the regular expression u flag
-  regexYFlag: true                        # enable the regular expression y flag
-  restParams: true                        # enable the rest parameters
-  spread: true                            # enable the spread operator
-  superInFunctions: true                  # enable super references inside of functions
-  templateStrings: true                   # enable template strings
-  unicodeCodePointEscapes: true           # enable code point escapes
-  globalReturn: true                      # allow return statements in the global scope
-  jsx: false                              # enable JSX
-  experimentalObjectRestSpread: false     # enable support for the experimental object rest/spread properties
+  sort-imports: 0                  # enforce sorted import declarations within modules
+  template-curly-spacing: 0        # require or disallow spacing around embedded expressions of template strings
+  yield-star-spacing: 0            # require or disallow spacing around the * in yield* expressions
