--- a/.stylelintrc.yaml
+++ b/.stylelintrc.yaml
@@ -1,121 +1,164 @@
 # Rules for stylelint
-# http://stylelint.io/?/docs/user-guide/rules.md
+# http://stylelint.io/user-guide/rules/
 
 rules:
+  indentation: "tab"
+  max-empty-lines: 2
+  max-line-length: 120
+  max-nesting-depth: null
+  no-browser-hacks: true
+  no-descending-specificity: null
+  no-duplicate-selectors: null
+  no-eol-whitespace: true
+  no-indistinguishable-colors: null
+  no-invalid-double-slash-comments: true
+  no-missing-eof-newline: true
+  no-unknown-animations: true
+  no-unsupported-browser-features: null
+  stylelint-disable-reason: null
+
   at-rule-empty-line-before: null
+  at-rule-name-case: "lower"
   at-rule-no-vendor-prefix: true
+  at-rule-semicolon-newline-after: "always"
 
   block-opening-brace-newline-before: "always-multi-line"
   block-opening-brace-newline-after: "always-multi-line"
   block-opening-brace-space-before: "always-single-line"
   block-opening-brace-space-after: "always-single-line"
   block-closing-brace-newline-before: "always-multi-line"
-  block-closing-brace-newline-after: "always-multi-line"
+  block-closing-brace-newline-after: "always"
   block-closing-brace-space-before: "always-single-line"
-  block-closing-brace-space-after: "always-single-line"
+  block-closing-brace-space-after: null
   block-no-empty:
     - true
     -
       warn: true
+  block-no-single-line: null
 
   color-hex-case: "upper"
   color-hex-length: null
+  color-named: null # Neutral, neither "never" nor "always-where-possible"
   color-no-hex: null
   color-no-invalid-hex: true
-  color-no-named: null
 
   comment-empty-line-before: null
   comment-whitespace-inside:
     - "always"
     -
       warn: true
+  comment-word-blacklist: null
 
   custom-property-no-outside-root: true
   custom-property-pattern: null
 
   declaration-bang-space-before: "always"
   declaration-bang-space-after: "never"
-  declaration-block-semicolon-newline-before: "never-multi-line"
-  declaration-block-semicolon-newline-after: "always-multi-line"
-  declaration-block-semicolon-space-before: "never"
-  declaration-block-semicolon-space-after: "always-single-line"
   declaration-colon-newline-after: "always-multi-line"
   declaration-colon-space-before: "never"
   declaration-colon-space-after: "always-single-line"
   declaration-no-important: null
 
+  declaration-block-no-duplicate-properties: true
+  declaration-block-no-ignored-properties: true
+  declaration-block-no-shorthand-property-overrides: true
+  declaration-block-properties-order: null
+  declaration-block-semicolon-newline-before: "never-multi-line"
+  declaration-block-semicolon-newline-after: "always-multi-line"
+  declaration-block-semicolon-space-before: "never"
+  declaration-block-semicolon-space-after: "always-single-line"
+  declaration-block-single-line-max-declarations: null
+  declaration-block-trailing-semicolon: "always"
+
+  font-family-name-quotes: "double-where-recommended"
+  font-weight-notation: "named-where-possible"
+
+  function-blacklist: null
+  function-whitelist: null
   function-calc-no-unspaced-operator: true
   function-comma-newline-before: "never-multi-line"
   function-comma-newline-after: "always-multi-line"
   function-comma-space-before: "never"
   function-comma-space-after: "always-single-line"
   function-linear-gradient-no-nonstandard-direction: true
+  function-max-empty-lines: null
+  function-name-case: null
   function-parentheses-newline-inside: null
   function-parentheses-space-inside: "never"
+  function-url-data-uris: null
   function-url-quotes: "double"
-  function-blacklist: null
-  function-whitelist: null
+  function-whitespace-after: "always"
 
-  indentation: "tab"
-  max-line-length: 120
-
+  custom-media-pattern: null
   media-feature-colon-space-before: "never"
   media-feature-colon-space-after: "always"
   media-feature-name-no-vendor-prefix: true
+  media-feature-no-missing-punctuation: true
   media-feature-range-operator-space-before: "always"
   media-feature-range-operator-space-after: "always"
+
   media-query-list-comma-newline-before: "never-multi-line"
   media-query-list-comma-newline-after: "always-multi-line"
   media-query-list-comma-space-before: "never"
   media-query-list-comma-space-after: "always-single-line"
   media-query-parentheses-space-inside: "never"
-  custom-media-pattern: null
-
-  no-eol-whitespace: true
-  no-missing-eof-newline: true
 
   number-leading-zero: "always"
   number-max-precision: 2
   number-no-trailing-zeros: true
   number-zero-length-no-unit: true
 
+  property-case: "lower"
   property-no-vendor-prefix: true
   property-blacklist: null
   property-whitelist: null
   property-unit-blacklist: null
   property-unit-whitelist: null
+  property-value-blacklist: null
+  property-value-whitelist: null
 
   root-no-standard-properties: true
 
   rule-nested-empty-line-before: null
-  rule-no-duplicate-properties: true
-  rule-no-shorthand-property-overrides: true
   rule-non-nested-empty-line-before: null
-  rule-properties-order: null
-  rule-trailing-semicolon: "always"
+
+  shorthand-property-no-redundant-values: null
 
   selector-combinator-space-before: "always"
   selector-combinator-space-after: "always"
-  selector-list-comma-newline-before: "never-multi-line"
-  selector-list-comma-newline-after: "always"
-  selector-list-comma-space-before: "never"
-  selector-list-comma-space-after: "always-single-line"
+  selector-attribute-brackets-space-inside: "never"
+  selector-class-pattern: null
+  selector-id-pattern: null
+  selector-max-specificity: null
   selector-no-attribute: null
   selector-no-combinator: null
   selector-no-id: null
   selector-no-type: null
   selector-no-universal: null
   selector-no-vendor-prefix: true
+  selector-pseudo-class-parentheses-space-inside: "never"
+  selector-pseudo-class-case: "lower"
+  selector-pseudo-element-case: "lower"
   selector-pseudo-element-colon-notation: "double"
   selector-root-no-composition: true
-  selector-class-pattern: null
-  selector-id-pattern: null
+  selector-type-case: "lower"
+
+  selector-list-comma-newline-before: "never-multi-line"
+  selector-list-comma-newline-after: "always"
+  selector-list-comma-space-before: "never"
+  selector-list-comma-space-after: "always-single-line"
 
   string-quotes: "double"
+  string-no-newline: true
+
+  time-no-imperceptible: true
 
   unit-blacklist: null
   unit-whitelist: null
+  unit-case: "lower"
+  unit-no-unknown: true
 
+  value-keyword-case: "lower"
   value-list-comma-newline-before: "never-multi-line"
   value-list-comma-newline-after: "always-multi-line"
   value-list-comma-space-before: "never"
